eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 512929855988.dkr.ecr.eu-central-1.amazonaws.com/simplebank:9ff5ac99da7cd41c683cad97db1f84e55c47e33d
        ports:
        - containerPort: 8080
